--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "add:component": "sh bin/component.sh"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.65.1"
