--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "sass": "^1.65.1"
   },
   "devDependencies": {
